# cw

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  build.rs  config.json  default_cw.cfg  dist-workspace.toml  test1.srt.txt
.github/workflows/: build.yml  release.yml  sync-todo.yml
src/: audit.rs  auditor.rs  checker.rs  converter.rs  downloader.rs  engine_translate.rs  lib.rs  main.rs  mode_a_compare.rs  mode_b_discord.rs  models.rs  report_format.rs  rules_stay_raw.rs  setup_config.rs  ui_style.rs  utils.rs
