[package]
name = "cw"
version = "1.1.0"
edition = "2024"

[dependencies]
opencc-rust = "1.1.14"
aho-corasick = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rayon = "1.11.0"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
