[package]
name = "cw"
version = "1.6.4"
edition = "2021"

[dependencies]
opencc-rust = "1.1.19"
regex = "1.10"
unicode-width = "0.1.11"
similar = "2.4.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
atty = "0.2"
reqwest = { version = "0.11", features = ["blocking", "multipart"] } # 這裡必須有 multipart
